# py-skyrc-charger

./: .gitignore  README.md  ReleaseNotes.md  pyproject.toml  requirements.txt  usb_list.py  usb_write.py
charger/: charger.py  commands.py  log_analysis.py  test_commands.py
docs/: 50-skyrc-t1000.rules  README.md  commands.md  dev.md  wireshark.md
example/: start_charging.py
py_charger/src/: charger.py  commands.py
py_charger/tests/: log_analysis.py  test_commands.py
py_skyrc_charger/: __init__.py  charger.py  commands.py
src/: checksum.py
testing/: checksum.py  decode.py  gpt_test.py  usb_connect.py
tests/: log_analysis.py  test_commands.py  usb_data_2025-02-27_12-44-46.txt
