[build-system]
requires = ["setuptools >= 77.0.3", "pyusb >= 1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "py_skyrc_charger_juri117"
version = "0.0.1"
authors = [
  { name="Juri Bieler", email="juribieler@gmail.com" },
]
description = "take control of the SkyRC charger"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/juri117/py_skyrc_charger"
Issues = "https://github.com/juri117/py_skyrc_charger/issues"
