[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_skyrc_charger"]
exclude = ["docs"]

[tool.hatch.build.targets.sdist]
exclude = ["docs"]

[project]
name = "py_skyrc_charger"
version = "0.0.4"
dependencies = [
    "pyusb >= 1.3.1",
]
authors = [
  { name="Juri Bieler", email="juribieler@gmail.com" },
]
description = "take control of the SkyRC charger"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/juri117/py_skyrc_charger"
Issues = "https://github.com/juri117/py_skyrc_charger/issues"
